--- a/views/about.html
+++ b/views/about.html
@@ -1,1 +1,16 @@
-<div>About</div>
+<div>
+    <div class="twelve columns">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+            <br/>
+            <h1>Title: Choose a Career Path Adventure</h1>
+            <br/>
+        </div>
+
+        <div class="six columns question offset-by-two" id="1">
+            <h4>Content test question</h4>
+        </div>
+    </div>
+</div>
