--- a/views/choose-character.html
+++ b/views/choose-character.html
@@ -9,7 +9,7 @@
             <br/>
         </div>
 
-        <div class="six columns question offset-by-two" id="1">
+        <div class="six columns question offset-by-two" id="change">
             <h4>Content test question</h4>
         </div>
     </div>
