--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,8 @@
 <div>
-
+    <div class="container">
+        <div class="twelve columns">
+            <br/>
+            <h1 class="title">Science Journey</h1>
+        </div>
+    </div>
 </div>
