start of adding resources

--- a/views/home.html
+++ b/views/home.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="twelve columns">
             <br/>
-            <h1 class="title">Science Journey</h1>
+            <h1>Science Journey</h1>
+            <br/>
+            <p>Welcome to Science Journey! This is an interactive story game, where you get to choose your character’s path and see where science can lead you. Every story is different, depending on your choices, so you might end up in places you never imagined. Have fun!</p>
         </div>
     </div>
 </div>
