--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,73 @@
     color: white;
   }
 
-  h1 {
-    font-family: 'VT323', monospace;
+  .homeBack {
+    background-image: url("../images/background.png");
+    background-repeat: repeat-x;
+    height: 1000px;
   }
+
+  .career {
+    padding-top: 5px;
+    width: 85%; 
+    height: 150%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.career:hover {
+  box-shadow: 14px 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+    
+#locked {
+    background-color: 	#6a97c1;
+}
+
+#unlocked {
+     background-color: 	#8fb9ff; 
+}
+
+.button {
+    background-color: 	#6a97c1;
+}
+
+.button:hover {
+    background-color: 	#8fb9ff;
+}
+
+body {
+    background-image: 	url("../images/background.png");
+    font-family: 'VT323', monospace;
+}
+
+b {
+   font-size: 200%; 
+}
+
+.staticContainer {
+    border-radius: 25px;
+    border: 2px solid white;
+    background-color: white;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}  
+
+#leftalign {
+    float: left;
+}
+
+p {
+    font-size: 150%;  
+}
+
+h1 {
+    font-size: 500%;    
+}
+
+
+
+
