--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,7 @@
 .minorBack {
   background-image: 	url("../images/background-minor.png");
   font-family: 'VT323', monospace;
+  padding-bottom: 60px;
 }
 
 b {
@@ -108,8 +109,7 @@ b {
     border: 2px solid white;
     background-color: white;
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 50px auto 50px auto;
     text-align: center;
 }  
 
