--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,8 @@
 }
 
 .majorBack {
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     background-image: 	url("../images/background.png");
     font-family: 'VT323', monospace;
 }
@@ -111,6 +112,15 @@ b {
     width: 80%;
     margin: 50px auto 50px auto;
     text-align: center;
+} 
+
+.title {
+  border-radius: 25px;
+  border: 5px solid #444;
+  background-color: white;
+  margin: 50px auto 50px auto;
+  padding: 20px;
+  text-align: center;
 }  
 
 #leftalign {
