--- a/views/home.html
+++ b/views/home.html
@@ -1,10 +1,14 @@
 <div class="majorBack">
     <div class="container">
         <div class="twelve columns">
-            <br/>
-            <h1>Science Journey</h1>
-            <br/>
-            <p>Welcome to Science Journey! This is an interactive story game, where you get to choose your character’s path and see where science can lead you. Every story is different, depending on your choices, so you might end up in places you never imagined. Have fun!</p>
+            <div class="title">
+                <h1>Science Journey</h1>
+                <br/>
+                <p>Welcome to Science Journey! This is an interactive story game, where you get to choose your character’s path and see where science can lead you. Every story is different, depending on your choices, so you might end up in places you never imagined. Have fun!</p>
+            </div>
+            <a class="button button-primary button-max"><h1>Start</h1></a>
+            <br/><br/>
+
         </div>
     </div>
 </div>
