--- a/views/choose-character.html
+++ b/views/choose-character.html
@@ -1,16 +1,14 @@
 <div>
-    <div class="twelve columns">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-            </ul>
-            <br/>
-            <h1>Title: Choose a Career Path Adventure</h1>
-            <br/>
-        </div>
-
-        <div class="six columns question offset-by-two" id="change">
-            <h4>Content test question</h4>
+    <div class="majorBack">
+        <div class="container">
+            <div class="twelve columns">
+                <div class="title">
+                    <h1>Choose a Character!</h1>
+                </div>
+                <a class="button button-primary button-max" href="#story-one"><h1>Next</h1></a>
+                <br/><br/>
+    
+            </div>
         </div>
     </div>
 </div>
