--- a/views/choose-character.html
+++ b/views/choose-character.html
@@ -5,7 +5,7 @@
                 <div class="title">
                     <h1>Choose a Character!</h1>
                 </div>
-                <a class="button button-primary button-max" href="#story-one"><h1>Next</h1></a>
+                <a class="button button-primary button-max" href="index.html/#story-one"><h1>Next</h1></a>
                 <br/><br/>
     
             </div>
