--- a/views/choose-character.html
+++ b/views/choose-character.html
@@ -5,6 +5,9 @@
                 <div class="title">
                     <h1>Choose a Character!</h1>
                 </div>
+            </div>
+            
+            <div class="twelve colums">
                 <a class="button button-primary button-max" href="index.html/#story-one"><h1>Next</h1></a>
                 <br/><br/>
     
