--- a/views/choose-character.html
+++ b/views/choose-character.html
@@ -6,9 +6,9 @@
                     <h1>Choose a Character!</h1>
                 </div>
             </div>
-            
+
             <div class="twelve colums">
-                <a class="button button-primary button-max" href="index.html/#story-one"><h1>Next</h1></a>
+                <a class="button button-primary button-max" href="#story-one"><h1>Next</h1></a>
                 <br/><br/>
     
             </div>
