--- a/views/about.html
+++ b/views/about.html
@@ -1,12 +1,17 @@
-<div>
-        <div class="staticContainer">
-            
-            <h1>About</h1>
-            <p>
-                Many students do not know about the wide variety of careers where science knowledge can help you. We made this game to                    combat this problem and inform students on the value of learning science. You start off in school and make a variety of                    choices about your science education and career path, before graduating and seeing what career your choices led up to. Try                to unlock them all!
-            <br> <br>
-                This game was made by 'Jack and the Beanstalks' for the 2018 Science Hackathon.
-            </p>
-                
-        </div>    
-</div>
+<div class="minorBack">
+        <div class="container">
+            <div class="twelve columns">
+                <div class="title">
+                    <h1>About</h1>
+                    <p>
+                        Many students do not know about the wide variety of careers where science knowledge can help you. We made this game to                    combat this problem and inform students on the value of learning science. You start off in school and make a variety of                    choices about your science education and career path, before graduating and seeing what career your choices led up to. Try                to unlock them all!
+                    <br> <br>
+                        This game was made by 'Jack and the Beanstalks' for the 2018 Science Hackathon.
+                    </p>
+                </div>
+                <a class="button button-primary button-max" href="#home"><h1>Back to Home</h1></a>
+                <br/><br/>
+    
+            </div>
+        </div>
+    </div>
