--- a/views/choices-one.html
+++ b/views/choices-one.html
@@ -1,16 +1,16 @@
-<div>
+<div class="majorBack">
     <div class="container">
         <div class="twelve columns">
-            <h4>
-                What sounds interesting? 
-            </h4>
-            <ol>
-                <li>Computer Science</li>
-                <li>Physics</li>
-                <li>Chemistry</li>
-                <li>Biology</li>
-                <li>Earth Science</li>
-            </ol>
+            <div class="title">
+                <h1>Science Journey</h1>
+                <p>Welcome to Science Journey! This is an interactive story game, where you get to choose your character’s path and see where science can lead you. Every story is different, depending on your choices, so you might end up in places you never imagined. Have fun!</p>
+            </div>
+            <a class="button button-primary button-med" href="#choose-character"><h3>A.</h3></a>
+            <a class="button button-primary button-med" href="#choose-character"><h3>B.</h3></a>
+            <a class="button button-primary button-med" href="#choose-character"><h3>C.</h3></a>
+            <a class="button button-primary button-med" href="#choose-character"><h3>D.</h3></a>
+            <br/><br/>
+
         </div>
     </div>
 </div>
