--- a/views/story-one.html
+++ b/views/story-one.html
@@ -1,9 +1,13 @@
-<div>
+<div class="majorBack">
     <div class="container">
         <div class="twelve columns">
-            <p>
-                Off you go! It’s your first day at a new school. There is a world of possibilities ahead, but all journeys begin with a first step. One of your study areas will be in the sciences, but you get to choose a branch to explore. Science looks at all different aspects of the world around us and inside us. 
-            </p>
+            <div class="title">
+                <h1>Science Journey</h1>
+                <p>Welcome to Science Journey! This is an interactive story game, where you get to choose your character’s path and see where science can lead you. Every story is different, depending on your choices, so you might end up in places you never imagined. Have fun!</p>
+            </div>
+            <a class="button button-primary button-max" href="#choose-character"><h1>Start</h1></a>
+            <br/><br/>
+
         </div>
     </div>
 </div>
