--- a/views/choices-one.html
+++ b/views/choices-one.html
@@ -2,13 +2,13 @@
     <div class="container">
         <div class="twelve columns">
             <div class="title">
-                <h1>Science Journey</h1>
-                <p>Welcome to Science Journey! This is an interactive story game, where you get to choose your character’s path and see where science can lead you. Every story is different, depending on your choices, so you might end up in places you never imagined. Have fun!</p>
+                <h1>What sounds interesting?</h1>
             </div>
-            <a class="button button-primary button-med" href="#story-two"><h3>A.</h3></a>
-            <a class="button button-primary button-med" href="#story-two"><h3>B.</h3></a>
-            <a class="button button-primary button-med" href="#story-two"><h3>C.</h3></a>
-            <a class="button button-primary button-med" href="#story-two"><h3>D.</h3></a>
+            <a class="button button-primary button-med" href="#story-two"><h3>A. Computer Science</h3></a>
+            <a class="button button-primary button-med" href="#story-two"><h3>B. Physics</h3></a>
+            <a class="button button-primary button-med" href="#story-two"><h3>C. Chemistry</h3></a>
+            <a class="button button-primary button-med" href="#story-two"><h3>D. Biology</h3></a>
+            <a class="button button-primary button-med" href="#story-two"><h3>E. Earth Science</h3></a>
             <br/><br/>
 
         </div>
