--- a/views/choices-one.html
+++ b/views/choices-one.html
@@ -4,11 +4,11 @@
             <div class="title">
                 <h1>What sounds interesting?</h1>
             </div>
-            <a class="button button-primary button-med" href="#story-two"><h3>A. Computer Science</h3></a>
-            <a class="button button-primary button-med" href="#story-two"><h3>B. Physics</h3></a>
-            <a class="button button-primary button-med" href="#story-two"><h3>C. Chemistry</h3></a>
-            <a class="button button-primary button-med" href="#story-two"><h3>D. Biology</h3></a>
-            <a class="button button-primary button-med" href="#story-two"><h3>E. Earth Science</h3></a>
+            <a class="button button-primary button-med" href="#story-one-result"><h3>A. Computer Science</h3></a>
+            <a class="button button-primary button-med" href="#story-one-result"><h3>B. Physics</h3></a>
+            <a class="button button-primary button-med" href="#story-one-result"><h3>C. Chemistry</h3></a>
+            <a class="button button-primary button-med" href="#story-one-result"><h3>D. Biology</h3></a>
+            <a class="button button-primary button-med" href="#story-one-result"><h3>E. Earth Science</h3></a>
             <br/><br/>
 
         </div>
