--- a/views/choices-three.html
+++ b/views/choices-three.html
@@ -2,13 +2,11 @@
     <div class="container">
         <div class="twelve columns">
             <div class="title">
-                <h1>What sounds interesting?</h1>
+                <h1>Choose the activity that you would want to explore.</h1>
             </div>
-            <a class="button button-primary button-med" href="#story-one-result"><h3>A. Computer Science</h3></a>
-            <a class="button button-primary button-med" href="#story-one-result"><h3>B. Physics</h3></a>
-            <a class="button button-primary button-med" href="#story-one-result"><h3>C. Chemistry</h3></a>
-            <a class="button button-primary button-med" href="#story-one-result"><h3>D. Biology</h3></a>
-            <a class="button button-primary button-med" href="#story-one-result"><h3>E. Earth Science</h3></a>
+            <a class="button button-primary button-med" href="#story-three-result"><h3>A. Art exhibit at museum </h3></a>
+            <a class="button button-primary button-med" href="#story-three-result"><h3>B. A tech hackathon at Vic</h3></a>
+            <a class="button button-primary button-med" href="#story-three-result"><h3>C. An book fair at TSB Arena</h3></a>
             <br/><br/>
 
         </div>
