--- a/views/story-three.html
+++ b/views/story-three.html
@@ -2,10 +2,9 @@
     <div class="container">
         <div class="twelve columns">
             <div class="title">
-                <h1>Science Journey</h1>
-                <p>Welcome to Science Journey! This is an interactive story game, where you get to choose your character’s path and see where science can lead you. Every story is different, depending on your choices, so you might end up in places you never imagined. Have fun!</p>
+                <p>On another day, you have an afternoon free to explore the city and find an activity that meets your interests.</p>
             </div>
-            <a class="button button-primary button-max" href="#choose-character"><h1>Start</h1></a>
+            <a class="button button-primary button-max" href="#choices-three"><h1>Start</h1></a>
             <br/><br/>
 
         </div>
