--- a/views/choice-result.html
+++ b/views/choice-result.html
@@ -29,9 +29,7 @@
             <p>??????</p>
         </div>
         <br>
-        <div class=button>
-            <b>Back</b>
-        </div>
+        <a class="button button-primary button-max" href="#home"><h1>Back to Home</h1></a>
         <br> <br>
     </div>
 </div>
