--- a/views/choice-result.html
+++ b/views/choice-result.html
@@ -1,6 +1,7 @@
 <div class="minorBack">
     <br>
     <div class="staticContainer">
+        <p>Given your interest in mechanics and your love for art, you might do well with a career in <b>ARCHITECTURE.</b></p>
         <br>
         <h1>Careers List</h1>
         <div class="career" id="unlocked">
