--- a/views/choose-character.html
+++ b/views/choose-character.html
@@ -6,7 +6,21 @@
                     <h1>Choose a Character!</h1>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="three columns">
+                        <img src="images/superheroe.svg" style="max-width: 200px">
+                </div>
+                <div class="three columns">
+                        <img src="images/superheroe1.svg" style="max-width: 200px">
+                </div>
+                <div class="three columns">
+                        <img src="images/superheroe (2).svg" style="max-width: 200px">
+                </div>
+                <div class="three columns">
+                        <img src="images/superheroe (3).svg" style="max-width: 200px">
+                </div>
+            </div>
+            <br/>
             <div class="twelve colums">
                 <a class="button button-primary button-max" href="#story-one"><h1>Next</h1></a>
                 <br/><br/>
