--- a/views/story-one.html
+++ b/views/story-one.html
@@ -1,4 +1,4 @@
-<div class="majorBack">
+<div class="story1Back">
     <div class="container">
         <div class="twelve columns">
             <div class="title">
