--- a/css/main.css
+++ b/css/main.css
@@ -104,9 +104,10 @@
 }
 
 .story1Back {
-  height: 100%;
-  min-height: 100vh;
+  height: 120%;
+  min-height: 120vh;
   background-image: 	url("../images/story1.png");
+  background: no-repeat;
   font-family: 'VT323', monospace;
   padding-bottom: 60px;
 }
