--- a/views/choice-result.html
+++ b/views/choice-result.html
@@ -31,7 +31,7 @@
             <p>??????</p>
         </div>
         <br>
-        <a class="button button-primary button-max" href="#home"><h1>Back to Home</h1></a>
+        <a class="button button-primary button-max" href="#home" style="width: 80%"><h1>Back to Home</h1></a>
         <br> <br>
     </div>
 </div>
