--- a/views/story-two.html
+++ b/views/story-two.html
@@ -7,7 +7,7 @@
                 <p>Let’s see what else happens to Barry.</p>
                 
             </div>
-            <a class="button button-primary button-max" href="#story-three"><h1>Next</h1></a>
+            <a class="button button-primary button-max" href="#story-two-result"><h1>Next</h1></a>
             <br/><br/>
 
         </div>
