--- a/views/story-three.html
+++ b/views/story-three.html
@@ -4,7 +4,7 @@
             <div class="title">
                 <p>On another day, you have an afternoon free to explore the city and find an activity that meets your interests.</p>
             </div>
-            <a class="button button-primary button-max" href="#choices-three"><h1>Start</h1></a>
+            <a class="button button-primary button-max" href="#choices-three"><h1>Next</h1></a>
             <br/><br/>
 
         </div>
