--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@
 }
 
 .story1Back {
-  height: 100%;
+  height: 1000px;
   min-height: 130vh;
   background-image: 	url("../images/story1.png");
   font-family: 'VT323', monospace;
