--- a/views/choices-two.html
+++ b/views/choices-two.html
@@ -4,10 +4,10 @@
             <div class="title">
                 <h1>Choose your area of interest?</h1>
             </div>
-            <a class="button button-primary button-med" href="#story-two-results"><h3>A. Mechanics</h3></a>
-            <a class="button button-primary button-med" href="#story-two-results"><h3>B. Astronomy</h3></a>
-            <a class="button button-primary button-med" href="#story-two-results"><h3>C. Optics</h3></a>
-            <a class="button button-primary button-med" href="#story-two-results"><h3>D. Thermodynamics</h3></a>
+            <a class="button button-primary button-med" href="#story-two-result"><h3>A. Mechanics</h3></a>
+            <a class="button button-primary button-med" href="#story-two-result"><h3>B. Astronomy</h3></a>
+            <a class="button button-primary button-med" href="#story-two-result"><h3>C. Optics</h3></a>
+            <a class="button button-primary button-med" href="#story-two-result"><h3>D. Thermodynamics</h3></a>
             <br/><br/>
 
         </div>
