--- a/views/story-two-result.html
+++ b/views/story-two-result.html
@@ -7,7 +7,7 @@
                         <p>Let’s see what else happens to Barry.</p>
                         
                 </div>
-                <a class="button button-primary button-max" href="#story-three"><h1>Career info...</h1></a>
+                <a class="button button-primary button-max" href="#story-three"><h1>Next</h1></a>
                 <br/><br/>
     
             </div>
